[package]
name = "rygit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "^1.0.98"
clap = { version = "^4.5.0", features = ["derive"] }
flate2 = { version = "^1.1.2", features = ["zlib", "rust_backend"] }
hex = "^0.4.3"
sha1 = "^0.10.6"
strum = { version = "^0.27.0", features = ["derive"] }

[dev-dependencies]
tempfile = "^3.10"
